# ChangeLog for media-libs/mediastreamer
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/mediastreamer/ChangeLog,v 1.25 2010/05/20 12:48:24 pva Exp $

*mediastreamer-2.4.0 (20 May 2010)

  20 May 2010; Peter Volkov <pva@gentoo.org> +mediastreamer-2.4.0.ebuild:
  Version bump.

  20 May 2010; Peter Volkov <pva@gentoo.org> mediastreamer-2.3.0-r1.ebuild:
  amd64 stable, bug 317235.

*mediastreamer-2.3.0-r1 (21 Mar 2010)

  21 Mar 2010; Fabian Groffen <grobian@gentoo.org>
  +mediastreamer-2.3.0-r1.ebuild:
  Revbump for Darwin (coreaudio) support, bump to EAPI=3 for Prefix support,
  marked ~ppc-macos and ~x86-macos, bug #310215

  23 Feb 2010; Joseph Jezak <josejx@gentoo.org> mediastreamer-2.3.0.ebuild:
  Marked ~ppc64.

*mediastreamer-2.3.0 (08 Feb 2010)

  08 Feb 2010; Alexey Shvetsov <alexxy@gentoo.org>
  +mediastreamer-2.3.0.ebuild:
  Version bump

  15 Nov 2009; Mounir Lamouri <volkmar@gentoo.org>
  mediastreamer-2.2.3_p1-r1.ebuild,
  -files/mediastreamer-2.2.3_p1-arts.patch, mediastreamer-2.2.4.ebuild:
  Remove arts related patch and clean ebuilds, wrt bug 291546

  11 Nov 2009; Samuli Suominen <ssuominen@gentoo.org>
  mediastreamer-2.2.3_p1-r1.ebuild, mediastreamer-2.2.4.ebuild:
  Remove USE arts (deprecated).

*mediastreamer-2.2.4 (20 Aug 2009)

  20 Aug 2009; Mike Frysinger <vapier@gentoo.org>
  +mediastreamer-2.2.4.ebuild:
  Version bump.

  19 Jul 2009; Mounir Lamouri <volkmar@gentoo.org>
  -mediastreamer-2.2.3-r1.ebuild, -files/mediastreamer-2.2.3-arts.patch,
  -files/mediastreamer-2.2.3-autodeps.patch:
  Removing old ebuilds and patches

  08 Jul 2009; Markus Meier <maekke@gentoo.org>
  mediastreamer-2.2.3_p1-r1.ebuild:
  amd64 stable, bug #259172

  03 Jul 2009; Mounir Lamouri <volkmar@gentoo.org>
  mediastreamer-2.2.3_p1-r1.ebuild:
  Stable on ppc, bug 259172

  02 Jul 2009; Christian Faulhammer <fauli@gentoo.org>
  mediastreamer-2.2.3_p1-r1.ebuild:
  stable x86, bug 259172
