@@ -8,6 +8,6 @@ EBUILD mediastreamer-2.2.3_p1-r1.ebuild 3818 RMD160 bd2c86eb7f73d3baaadca3c30890
 EBUILD mediastreamer-2.2.4.ebuild 3567 RMD160 ce83f0b19ee9fad19eb5c240e2ca5eef515b3058 SHA1 3e8e40866d6cb1a6bda7a65337e33b646814da43 SHA256 18e7024b0558ca62868b822d944675a37405738493b82d3424adc1d95186a8af
 EBUILD mediastreamer-2.3.0-r1.ebuild 3846 RMD160 7254de437cc1b93037ba78a712d7320fabc369d4 SHA1 0427364d892a5bf97f33302ff72ede2f1ff7a890 SHA256 24475e49c012fb7625a699b3e36103b8f2b6716566358dafd4858cb7b160efea
 EBUILD mediastreamer-2.3.0.ebuild 3522 RMD160 ebffcc448347c1f0abb10d43d31abfaf3e0a9cba SHA1 cc7f719ca9dc867e2d42167fb85a2b3313e55c74 SHA256 a5aeb2b3f9a4f35a2db351bd2d2b069abaa887463ff59957564324b78b7e800e
-EBUILD mediastreamer-2.4.0.ebuild 4215 RMD160 43dd1701920036eaf1b067cd68d99710bb6237ad SHA1 2395d225c54fc96c888b29a9382cd84b261810a2 SHA256 6d38f9da32725ab1d903f50e50220e1c544029b1fec97b57903e994d4cbb6b02
-MISC ChangeLog 3624 RMD160 9399338d43476af08b361423027d181f96f37660 SHA1 7d23a9f2b749864b99c3a9e6ce421a3f59e8e2f2 SHA256 8bcf946e163290c2c96cac095537ab2549cf0e40dd30f77beff2a7d5aa38f487
+EBUILD mediastreamer-2.4.0.ebuild 4166 RMD160 9d5910f8a37cab7d79aee33ac897c8d17d293420 SHA1 27b9d594ecde3335256135bd11f9db6ce6fcc5e1 SHA256 5735940704a6c8b9272cb67a51f5646a3b914c15c50f2e749cd76c756b5c535c
+MISC ChangeLog 3801 RMD160 f7c14ad560b94f536a9bc4da111f2ef42c37523b SHA1 fbc7fd7e50d5dc5f0d6ebdc9939c64ce1ac5fce0 SHA256 cbc679c30bed7764ae0034ea7b8db2f6d0a6f46097ab8fd4bb26668d7dd0779d
 MISC metadata.xml 380 RMD160 24797b26f9f2ef16ea5261c536ebed58e3903e97 SHA1 74bcc7d7e8bd26a92450ee714743a975ed595de0 SHA256 5cd96440722093ad63d25758891be2656d8c7f8b570eddfee1fbdce5860d237a
