@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/mediastreamer
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/mediastreamer/ChangeLog,v 1.25 2010/05/20 12:48:24 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/mediastreamer/ChangeLog,v 1.26 2010/05/21 06:30:23 pva Exp $
+
+  21 May 2010; Peter Volkov <pva@gentoo.org> mediastreamer-2.4.0.ebuild:
+  mediastreamer-2.4.0 requires ortp-0.16.2, bug 320751, thank Nikoli for
+  report. Use nongnu mirrors.
 
 *mediastreamer-2.4.0 (20 May 2010)
 
